<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CEF6D8"
    tools:context="miranda.com.olivesservices.actividades.InsertActivity">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:id="@+id/formulario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/universal_margin">

            <EditText
                android:id="@+id/kilogramos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Kg_hint"
                android:inputType="number"
                android:digits="1234567890"
                android:maxLength="5"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/etiqueta_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/universal_margin"
            android:text="@string/cliente_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/accentColor" />

        <Spinner
            android:id="@+id/cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/clientes" />

        <TextView
            android:id="@+id/fecha_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/universal_margin"
            android:text="@string/fecha_title"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/accentColor" />


        <TextView
            android:id="@+id/fecha"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2015-07-11"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/universal_margin">

            <EditText
                android:id="@+id/escandallo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion_hint"
                android:maxLength="30"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/boton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/universal_margin"

        android:onClick="alClickearBoton"
        android:text="@string/boton"
        android:textColor="@android:color/white" />
</RelativeLayout>
